--- a/templates/view_classrooms.html
+++ b/templates/view_classrooms.html
@@ -68,9 +68,7 @@
     async function initializeLIFF() {
         try {
           // サーバーからLIFF IDを取得
-          const liffId = await fetch("/liff-id")
-            .then(response => response.text());
-
+          const liffId = document.getElementById("liff-container").dataset.liffId;
           // LIFFを初期化
           await liff.init({ liffId: liffId });
 
