--- a/templates/view_classrooms.html
+++ b/templates/view_classrooms.html
@@ -150,7 +150,7 @@
       </tr>
     </thead>
     <tbody>
-      {% for row_index, row_data in rows %}
+      {% for row_index, popup_data, row_data in rows %}
       <tr>
         <td class="clickable" onclick="showPopup('{{ row_data[0] }}', '{{ row_data[-1] }}')">
           {{ row_data[0] }}
