--- a/templates/form_alb.html
+++ b/templates/form_alb.html
@@ -34,7 +34,7 @@
       border-radius: 30px;
       width: 100%;
       font-size: 1rem;
-      background: {{ settings.button_color | default('#06c755') }};
+      background: #06c755;
     }
   </style>
   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
@@ -114,8 +114,11 @@
       <input type="text" name="{{ field.name }}" id="{{ field.name }}">
     {% endfor %}
 
-    <button type="submit" id="submitBtn" disabled>送信</button>
+    <button type="submit" id="submitBtn" disabled style="background: {{ settings.button_color | default('#06c755') }};">送信</button>
   </form>
+  <div id="successMsg" class="success-message" style="display:none">
+  ✅ 登録が完了しました！ご協力ありがとうございます。
+  </div>
   <script>
     async function linkLiffIdBeforeSubmit(event) {
       const nickname = document.getElementById("name").value;
