様々なエラー改善

--- a/templates/form_classroom.html
+++ b/templates/form_classroom.html
@@ -100,7 +100,7 @@
       <option value="バク宙">バク宙</option>
     </select>
 
-    <label for="notes">{{ settings.form_label_classroom_notes | default("補足・備考") }}</label>
+    <label for="notes">業務詳細・その他自由記述</label>
     <input type="text" name="details" id="notes">
 
     {% set required_custom_fields = [] %}
