様々なエラー改善

--- a/templates/view_classrooms.html
+++ b/templates/view_classrooms.html
@@ -249,22 +249,23 @@
         {% for row_index, popup_data, row_data in rows %}
         <tr>
           {% for i in range(row_data|length) %}
-            {% if headers[i] == '希望する経験' %}
-              <td data-label="{{ headers[i] }}" class="experience-col">
+            {% set header = headers[i] %}
+            {% if header in ['希望する経験', '希望経験'] %}
+              <td data-label="{{ header }}" class="experience-col">
                 {% for item in row_data[i].split(',') %}
                   <div>{{ item.strip() }}</div>
                 {% endfor %}
               </td>
-            {% elif headers[i] == '補助レベル' %}
-              <td data-label="{{ headers[i] }}" class="level-col">
+            {% elif header in ['補助レベル', '補助レベル（複数選択可）'] %}
+              <td data-label="{{ header }}" class="level-col">
                 {% for item in row_data[i].split(',') %}
                   <div>{{ item.strip() }}</div>
                 {% endfor %}
               </td>
             {% elif i == 0 %}
-              <td data-label="{{ headers[i] }}" class="clickable" onclick="showPopup('{{ row_data[0]|e }}', '{{ popup_data|e }}')">{{ row_data[i] }}</td>
+              <td data-label="{{ header }}" class="clickable" onclick="showPopup('{{ row_data[0]|e }}', '{{ popup_data|e }}')">{{ row_data[i] }}</td>
             {% else %}
-              <td data-label="{{ headers[i] }}">{{ row_data[i] }}</td>
+              <td data-label="{{ header }}">{{ row_data[i] }}</td>
             {% endif %}
           {% endfor %}
           <td class="interest-btn-row">
