様々なエラー改善

--- a/templates/view_classrooms.html
+++ b/templates/view_classrooms.html
@@ -135,7 +135,7 @@
         min-height: 3.5rem;
         display: flex;
         flex-direction: column;
-        gap: 0.2rem;
+        gap: 0.7rem;
       }
       td {
         border: none;
@@ -154,15 +154,27 @@
         font-weight: bold;
         color: #06c755;
         display: inline-block;
-        min-width: 5.5em;
-        font-size: 1.08em;
+        min-width: 6em;
+        font-size: 1.13em;
         margin-right: 0.3em;
+      }
+      td.clickable {
+        font-size: 1.22em;
+        font-weight: bold;
+        color: #00b900;
+        margin-bottom: 0.2em;
       }
       .interest-btn-row {
         text-align: right;
-        margin-top: 0.7rem;
+        margin-top: 1.1rem;
         display: flex;
         justify-content: flex-end;
+      }
+      .interest-btn-row button {
+        width: 100%;
+        font-size: 1.18em;
+        padding: 1em 0;
+        border-radius: 18px;
       }
       .experience-col, .level-col {
         flex-direction: column;
